WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291603
New Test (
292698@main
): [ Sequoia wk1 ] accessibility/text-marker/text-marker-debug-description.html is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=291603
Summary
New Test (292698@main): [ Sequoia wk1 ] accessibility/text-marker/text-marker...
Karl Rackler
Reported
2025-04-15 16:36:33 PDT
Description: accessibility/text-marker/text-marker-debug-description.html The test was added at
292698@main
and has been a consistent failure on Sequoia wk1 since then. This issue can be reproduced using the command: run-webkit-tests --debug --no-retry --force -1 --iterations=1 accessibility/text-marker/text-marker-debug-description.html History:
https://results.webkit.org/?suite=layout-tests&test=accessibility%2Ftext-marker%2Ftext-marker-debug-description.html&flavor=wk1
Diff: @@ -1,21 +1,7 @@ -This tests the AXTextMarker and AXTextMarkerRange DebugDescription APIs. - -text: -text: 'some text', start: {role StaticText, anchor 0, affinity 1, offset 0, charStart 0, charOffset 0, origin Unknown}, end: {role StaticText, anchor 0, affinity 1, offset 9, charStart 0, charOffset 9, origin Unknown} - -role StaticText, anchor 0, affinity 1, offset 0, charStart 0, charOffset 0, origin Unknown - -role StaticText, anchor 0, affinity 1, offset 9, charStart 0, charOffset 9, origin Unknown - -link: -text: 'Click on the hypertext.', start: {role StaticText, anchor 0, affinity 1, offset 0, charStart 0, charOffset 0, origin Unknown}, end: {role StaticText, anchor 0, affinity 1, offset 23, charStart 0, charOffset 23, origin Unknown} - -role StaticText, anchor 0, affinity 1, offset 0, charStart 0, charOffset 0, origin Unknown - -role StaticText, anchor 0, affinity 1, offset 23, charStart 0, charOffset 23, origin Unknown - - -PASS successfullyParsed is true +CONSOLE MESSAGE: TypeError: axElement.textMarkerRangeDebugDescription is not a function. (In 'axElement.textMarkerRangeDebugDescription(range)', 'axElement.textMarkerRangeDebugDescription' is undefined) +FAIL successfullyParsed should be true. Was false. +Some tests failed. TEST COMPLETE - +some text +Click on the hypertext.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-15 16:38:34 PDT
<
rdar://problem/149343437
>
EWS
Comment 2
2025-04-15 16:47:05 PDT
Test gardening commit
293739@main
(3d1d17272c0d): <
https://commits.webkit.org/293739@main
> Reviewed commits have been landed. Closing PR #44126 and removing active labels.
Andres Gonzalez
Comment 3
2025-04-16 18:56:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44176
EWS
Comment 4
2025-04-17 07:05:32 PDT
Committed
293792@main
(91145ee4eea6): <
https://commits.webkit.org/293792@main
> Reviewed commits have been landed. Closing PR #44176 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug