New Test (292698@main): [ Sequoia wk1 ] accessibility/text-marker/text-marker-debug-description.html is a consistent failure https://bugs.webkit.org/show_bug.cgi?id=291603 rdar://149343437

Reviewed by Tyler Wilcock.

Was missig the DumpRenderTree implementation of the new AccessibilityUIElement methods.

* LayoutTests/platform/mac-wk1/TestExpectations:
* Tools/DumpRenderTree/AccessibilityUIElement.cpp:
(textMarkerDebugDescriptionCallback):
(textMarkerRangeDebugDescriptionCallback):
(AccessibilityUIElement::textMarkerDebugDescription):
(AccessibilityUIElement::textMarkerRangeDebugDescription):
(AccessibilityUIElement::getJSClass):
* Tools/DumpRenderTree/AccessibilityUIElement.h:
* Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::textMarkerDebugDescription):
(AccessibilityUIElement::textMarkerRangeDebugDescription):

Canonical link: https://commits.webkit.org/293792@main